# ixray-1.6-stcop

./: .editorconfig  .gitignore  .markdownlint-cli2.yaml  .markdownlint.json  .tgitconfig  .vsconfig  .xrignore  ActorEditorLevel.cform  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rus.md  CONTRIBUTING.md  CONTRIBUTING.rus.md  CONTRIBUTORS.md  CONTRIBUTORS.rus.md  ConvertLibraries.bat  Directory.Build.props  DownloadDependencies.bat  IXRay.code-workspace  InstallElpack.bat  LICENSE.md  LICENSE.rus.md  LaunchEngine.bat  NuGet.config  ProjectGroup1.groupproj  README.md  README.rus.md  SECURITY.md  SECURITY.rus.md  XRay.All.slnf  XRay.Components.groupproj  XRay.Compressor.slnf  XRay.Dependencies.VS2013.sln  XRay.Dependencies.VS2015.sln  XRay.Dependencies.VS2017.sln  XRay.Editors.BCB6.bpg  XRay.Editors.groupproj  (+34 more)
src/: CMakeLists.txt  Compressor.targets  FreeImage.targets  GameSpy.targets  LibOgg.targets  LibTheora.targets  LibVorbis.targets  LibVorbisFile.targets  MagicFM.targets  Mixed.targets  OpenAL32.targets  Server.targets  all_editors.bpg  all_editors.dsk  engine.sln  engine.sln_old  engine.vs2010.sln  engine.vs2012.sln  engine.vs2013.sln  ixray.natvis
src/3rd party/: CMakeLists.txt
src/CustomOpenFileDialog/: AuthorAttribute.cs  CustomOpenFileDialog.csproj  CustomOpenFileDialog.sln  FormMain.Designer.cs  FormMain.cs  FormMain.resx  FormOpenFileDialog.Designer.cs  FormOpenFileDialog.cs  FormOpenFileDialog.resx  OpenFileDialogEx.cs  UserControl1.Designer.cs  UserControl1.cs
src/Editors/: CMakeLists.txt
src/Flobbster.Windows.Forms/: Flobbster.Windows.Forms.csproj  PropertyBag.cs  PropertySpec.cs  PropertySpecEventArgs.cs  PropertyTable.cs
src/GitParser/: CMakeLists.txt  GitParser.cpp
src/all_editors_vs/: all_editors_vs.sln  all_editors_vs.vcproj
src/common/: face_smoth_flags.h  itterate_adjacents.h
src/editor/: AssemblyInfo.cpp  Packages.config  converting.hpp  editor.rc  editor.vcproj  editor.vcxproj  editor.vcxproj.filters  engine_include.hpp  entry_point.cpp  ide_impl.cpp  ide_impl.hpp  pch.cpp  pch.hpp  property_boolean.cpp  property_boolean.hpp  property_boolean_reference.cpp  property_boolean_reference.hpp  property_boolean_values_value.cpp  property_boolean_values_value.hpp  property_boolean_values_value_reference.cpp  property_boolean_values_value_reference.hpp  property_collection.cpp  property_collection.hpp  property_collection_base.cpp  property_collection_base.hpp  property_collection_converter.cpp  property_collection_converter.hpp  property_collection_editor.cpp  property_collection_editor.hpp  property_collection_enumerator.cpp  property_collection_enumerator.hpp  property_collection_getter.cpp  property_collection_getter.hpp  property_color.cpp  property_color.hpp  property_color_base.cpp  property_color_base.hpp  property_color_reference.cpp  property_color_reference.hpp  property_container.cpp  (+117 more)
src/editor_controls/: AssemblyInfo.cpp  editor_controls.vcproj  editor_controls.vcxproj  editor_controls.vcxproj.filters  pch.cpp  pch.hpp  property_container_interface.hpp  property_grid.cpp  property_grid.hpp  property_incrementable.hpp  property_mouse_events.hpp  property_value.hpp
src/editors/: howto.txt
src/plugins/: CMakeLists.txt  xrPlugins.sln  xrPlugins.vs2013.sln
src/utils/: CMakeLists.txt  Shader_xrLC.h
src/xrCDB/: CMakeLists.txt  Frustum.cpp  Frustum.h  ISpatial.cpp  ISpatial.h  ISpatial_q_box.cpp  ISpatial_q_frustum.cpp  ISpatial_q_ray.cpp  ISpatial_verify.cpp  OPC_AABB.cpp  OPC_AABB.h  OPC_AABBCollider.cpp  OPC_AABBCollider.h  OPC_AABBTree.cpp  OPC_AABBTree.h  OPC_BVTCache.h  OPC_BoundingSphere.h  OPC_Collider.cpp  OPC_Collider.h  OPC_Common.cpp  OPC_Common.h  OPC_Container.cpp  OPC_Container.h  OPC_FPU.h  OPC_Matrix3x3.cpp  OPC_Matrix3x3.h  OPC_Matrix4x4.cpp  OPC_Matrix4x4.h  OPC_MemoryMacros.h  OPC_Model.cpp  OPC_Model.h  OPC_OBB.cpp  OPC_OBB.h  OPC_OBBCollider.cpp  OPC_OBBCollider.h  OPC_OptimizedTree.cpp  OPC_OptimizedTree.h  OPC_Plane.cpp  OPC_Plane.h  OPC_PlanesAABBOverlap.h  (+49 more)
src/xrCPU_Pipe/: 3DNow!Lib.cpp  CMakeLists.txt  PLC.cpp  StdAfx.cpp  StdAfx.h  resource.h  ttapi.cpp  ttapi.h  xrBoneLerp.cpp  xrBoneLerp_3DNow!.cpp  xrCPU_Pipe.cpp  xrCPU_Pipe.h  xrCPU_Pipe.icproj  xrCPU_Pipe.rc  xrCPU_Pipe.vcproj  xrCPU_Pipe.vcxproj  xrCPU_Pipe.vcxproj.filters  xrM44mul.cpp  xrM44mul_3DNow!.cpp  xrMemCopy8_3DNow!.cpp  xrMemFill32_3DNow!.cpp  xrQuatSlerp.cpp  xrSkin1W.cpp  xrSkin1W_3DNow!.cpp  xrSkin1W_SSE.cpp  xrSkin2W.cpp  xrSkin2W_3DNow!.cpp  xrSkin2W_SSE.cpp  xrSkin2W_thread.cpp  xrTransfer.cpp
src/xrCore/: CMakeLists.txt  ChooseTypes.H  ChooseTypesHelper.H  Coder.hpp  DateTime.cpp  DateTime.hpp  ELocatorAPI.cpp  ELocatorAPI.h  EngineProfiler.cpp  EngineProfiler.h  EventAPI.cpp  EventAPI.h  EventManager.cpp  EventManager.h  FS.cpp  FS.h  FS_impl.h  FS_internal.h  FTimer.cpp  FTimer.h  FTimerScope.h  FileSystem.cpp  FileSystem.h  FileSystem_borland.cpp  FixedMap.h  FixedSet.h  FixedVector.h  LocatorAPI.cpp  LocatorAPI.h  LocatorAPI_Notifications.cpp  LocatorAPI_Notifications.h  LocatorAPI_auth.cpp  LocatorAPI_defs.cpp  LocatorAPI_defs.h  LzHuf.cpp  Model.cpp  NET_utils.cpp  PPMd.h  PPMdType.h  Packages.config  (+169 more)
src/xrD3D9-Null/: IDirect3D9.cpp  IDirect3D9.h  IDirect3DCubeTexture9.cpp  IDirect3DCubeTexture9.h  IDirect3DDevice9.cpp  IDirect3DDevice9.h  IDirect3DDevice9_Caps.cpp  IDirect3DIndexBuffer9.cpp  IDirect3DIndexBuffer9.h  IDirect3DPixelShader9.cpp  IDirect3DPixelShader9.h  IDirect3DQuery9.cpp  IDirect3DQuery9.h  IDirect3DStateBlock9.cpp  IDirect3DStateBlock9.h  IDirect3DSurface9.cpp  IDirect3DSurface9.h  IDirect3DTexture9.cpp  IDirect3DTexture9.h  IDirect3DVertexBuffer9.cpp  IDirect3DVertexBuffer9.h  IDirect3DVertexDeclaration9.cpp  IDirect3DVertexDeclaration9.h  IDirect3DVertexShader9.cpp  IDirect3DVertexShader9.h  ReadMe.txt  stdafx.cpp  stdafx.h  xrD3D9-Null.cpp  xrD3D9-Null.def  xrD3D9-Null.h  xrD3D9-Null.vcproj  xrD3D9-Null.vcxproj  xrD3D9-Null.vcxproj.filters  xrD3D9-Null_OutProc.cpp  xrD3D9-Null_OutProc.h
src/xrEngine/: Application.cpp  Application.h  CameraBase.h  (+293 more)
(+16694 files in other folders)
