add_subdirectory("xrDXT")
add_subdirectory("xrQSlim")
add_subdirectory("xrLC_Light")
#add_subdirectory("xrLC_LightStab")
add_subdirectory("xrDO_Light")
add_subdirectory("xrLC")
add_subdirectory("ETools")
add_subdirectory("xrCompress")
add_subdirectory("xrSE_Factory")
add_subdirectory("xrAI")
if (IXRAY_MP)
    add_subdirectory("mp_balancer")
    add_subdirectory("mp_configs_verifyer")
    add_subdirectory("mp_screenshots_info")
    add_subdirectory("mp_gpprof_server")
endif()